# skin-cancer-api

./: .gitignore  README.md  docker-compose-dev.yaml  docker-compose-prod.yaml  docker-compose.yaml
.github/workflow/: cd.yaml  ci.yaml
.github/workflows/: cd.yaml  ci.yaml
configs/: logging.json  pipeline.json
project/: .dockerignore  Dockerfile  pylock.toml  pyproject.toml  requirements-dev.txt  requirements-prod.txt  requirements.txt
project/app/: config.py  main.py  schemas.py
project/app/tests/: test_main.py
project/app/utils/: tools.py
src/: models.py  processor.py  tools.py
